fix: Straighten up spacing after icon on landing

--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -40,7 +40,6 @@ body.home {
 
       .far, .fas {
         width: 1.5rem;
-        margin-right: .5rem;
         margin-left: -2rem;
         text-align: center;
       }
